# jacv

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  ast.c  compile.py  io_utils.c  jacv.c  lexer.c  list.c  test.jacv
include/: allocator.h  ast.h  defines.h  gc.h  internals.h  io_utils.h  jacv.h  jcontext.h  jmemory.h  jruntime.h  jutils.h  keywords.h  lexer.h  list.h  map.h  primitives.h  tokens.h
include/jutils/: error.h  jutils.h  string.h
src/: ast.c  io_utils.c  jacv.c  jcontext.c  jruntime.c  jutils.c  lexer.c  list.c  map.c  string.c
test/: test.jacv
